TESB-26871: Memory Leak in CXF of Runtime

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 
     <properties>
         <locator.tesb.version>7.0.1.tesb1</locator.tesb.version>
+        <cxf-rt-features-clustering.tesb.version>3.2.4.tesb1</cxf-rt-features-clustering.tesb.version>
         <packages.version>${project.version}</packages.version>
         <cxf.version>3.2.4</cxf.version>
         <camel.version>2.20.1</camel.version>
