--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,21 @@
         <javax.el.version>3.0.0</javax.el.version>
         <pax-cdi.version>1.0.0.RC2</pax-cdi.version>
 
+        <jclouds.version>2.1.2</jclouds.version>
+        <pax-url-classpath.version>1.2.8</pax-url-classpath.version>
+        <wss4j.version>2.2.2</wss4j.version>
+        <xerces.version>2.12.0_1</xerces.version>
+        <log4j.version>1.2.17</log4j.version>
+        <pax-web.version>7.2.10</pax-web.version>
+        <pax-logging.version>1.10.1</pax-logging.version>
+        <javax-annotation.version>1.3.1</javax-annotation.version>
+        <blueprint.core.version>1.8.3</blueprint.core.version>
+        <jackson.version>2.9.9</jackson.version>
+        <qpid-jms.version>0.11.1</qpid-jms.version>
+        <fastjson.version>1.2.37_1</fastjson.version>
+        <sparkjava-core.version>2.6.0_1</sparkjava-core.version>
+        <mustache-compiler.version>0.9.5_1</mustache-compiler.version>
+
         <surefire.plugin.version>2.20.1</surefire.plugin.version>
 
         <cxf.build-utils.version>3.4.1</cxf.build-utils.version>
@@ -362,76 +377,14 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.7</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.cxf.build-utils</groupId>
-                        <artifactId>cxf-buildtools</artifactId>
-                        <version>${cxf.build-utils.version}</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version>2.8</version>
-                            <configuration>
-                                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-report-plugin</artifactId>
-                            <version>${surefire.plugin.version}</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>cobertura-maven-plugin</artifactId>
-                            <!-- version 2.6 cause test failures -->
-                            <version>2.7</version>
-                            <configuration>
-                                <aggregate>true</aggregate>
-                                <outputDirectory>${project.reporting.outputDirectory}/cobertura</outputDirectory>
-                                <formats>
-                                    <format>html</format>
-                                    <format>xml</format>
-                                </formats>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-jxr-plugin</artifactId>
-                            <version>2.5</version>
-                            <configuration>
-                                <aggregate>true</aggregate>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-checkstyle-plugin</artifactId>
-                            <version>3.0.0</version>
-                            <configuration>
-                                <configLocation>
-                                    ${cxf.resources.base.path}cxf-checkstyle${cxf.checkstyle.extension}.xml
-                                </configLocation>
-                                <suppressionsLocation>${cxf.resources.base.path}cxf-checkstyle-suppressions.xml
-                                </suppressionsLocation>
-                                <!--failsOnError>true</failsOnError-->
-                                <!-- http://jira.codehaus.org/browse/MCHECKSTYLE-62 -->
-                                <!--aggregate>true</aggregate-->
-                            </configuration>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -490,6 +443,61 @@
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <outputDirectory>${project.reporting.outputDirectory}/cobertura</outputDirectory>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <configLocation>
+                        ${cxf.resources.base.path}cxf-checkstyle${cxf.checkstyle.extension}.xml
+                    </configLocation>
+                    <suppressionsLocation>${cxf.resources.base.path}cxf-checkstyle-suppressions.xml
+                    </suppressionsLocation>
+                    <!--failsOnError>true</failsOnError-->
+                    <!-- http://jira.codehaus.org/browse/MCHECKSTYLE-62 -->
+                    <!--aggregate>true</aggregate-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <repositories>
         <!-- repository>
