--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -33,24 +33,6 @@
     <description>Packages TESB_SE final product</description>
 
     <properties>
-        <zookeeper.package.version>${zookeeper.version}</zookeeper.package.version>
-        <jclouds.version>2.1.2</jclouds.version>
-        <pax-url-classpath.version>1.2.8</pax-url-classpath.version>
-        <wss4j.version>2.2.2</wss4j.version>
-        <xerces.version>2.12.0_1</xerces.version>
-        <log4j.version>1.2.17</log4j.version>
-        <pax-web.version>7.2.10</pax-web.version>
-        <pax-logging.version>1.10.1</pax-logging.version>
-        <javax-annotation.version>1.3</javax-annotation.version>
-        <blueprint.core.version>1.8.3</blueprint.core.version>
-        <jackson.version>2.9.9</jackson.version>
-        <!-- Jetty version declared in parent POM -->
-        <!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
-        <qpid-jms.version>0.11.1</qpid-jms.version>
-        <fastjson.version>1.2.37_1</fastjson.version>
-        <sparkjava-core.version>2.6.0_1</sparkjava-core.version>
-        <mustache-compiler.version>0.9.5_1</mustache-compiler.version>
-
         <!-- used for assembly & dependency type, overwritten by dev-unix-assembly-only & dev-win-assembly-only profiles -->
         <assembly.formats>tar.gz,zip</assembly.formats>
 	</properties>
@@ -1068,7 +1050,7 @@
 								<artifactItem>
 									<groupId>org.apache.zookeeper</groupId>
 									<artifactId>zookeeper</artifactId>
-									<version>${zookeeper.package.version}</version>
+									<version>${zookeeper.version}</version>
 									<type>tar.gz</type>
 									<outputDirectory>target/dependencies/zookeeper</outputDirectory>
 								</artifactItem>
@@ -1480,10 +1462,7 @@
                                  <replaceregexp byline="true"
                                            match="^(\s*mvn\\:org.apache.karaf.features/org.apache.karaf.features.core/${karaf.version})(\s*=.*)$"
                                            replace="\1/jar/TESB\2">
-                                    <fileset dir="target/dependencies/unix/apache-karaf-${karaf.version}/etc/">
-                                        <include name="startup.properties"/>
-                                    </fileset>
-                                    <fileset dir="target/dependencies/win/apache-karaf-${karaf.version}/etc/">
+                                    <fileset dir="target/dependencies/apache-karaf/apache-karaf-${karaf.version}/etc/">
                                         <include name="startup.properties"/>
                                     </fileset>
                                  </replaceregexp>
@@ -1576,7 +1555,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
 				<executions>
 					<execution>
 						<id>bin</id>
@@ -1596,13 +1574,6 @@
 					</execution>
 				</executions>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -1625,6 +1596,12 @@
             <id>dev-win-assembly-only</id>
             <properties>
                 <assembly.formats>zip</assembly.formats>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev-dir-assembly-only</id>
+            <properties>
+                <assembly.formats>dir</assembly.formats>
             </properties>
         </profile>
     </profiles>
