--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -30,22 +30,12 @@
     <artifactId>talend-esb</artifactId>
     <name>Talend ESB :: Assembly</name>
     <packaging>pom</packaging>
+    <description>Packages TESB_SE final product</description>
 
     <properties>
-        <zookeeper.package.version>${zookeeper.version}</zookeeper.package.version>
-        <jclouds.version>2.1.2</jclouds.version>
-        <pax-url-classpath.version>1.2.8</pax-url-classpath.version>
-        <wss4j.version>2.2.2</wss4j.version>
-        <xerces.version>2.12.0_1</xerces.version>
-        <log4j.version>1.2.17</log4j.version>
-        <pax-web.version>7.2.10</pax-web.version>
-        <pax-logging.version>1.10.1</pax-logging.version>
-        <javax-annotation.version>1.3.1</javax-annotation.version>
-        <blueprint.core.version>1.8.3</blueprint.core.version>
-        <jackson.version>2.9.9</jackson.version>
-        <!-- Jetty version declared in parent POM -->
-        <!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
-    </properties>
+        <!-- used for assembly & dependency type, overwritten by dev-unix-assembly-only & dev-win-assembly-only profiles -->
+        <assembly.formats>tar.gz,zip</assembly.formats>
+	</properties>
 
     <dependencies>
         <dependency>
@@ -1007,111 +997,105 @@
                                     <groupId>org.apache.karaf</groupId>
                                     <artifactId>apache-karaf</artifactId>
                                     <version>${karaf.version}</version>
-                                    <type>tar.gz</type>
-                                    <outputDirectory>target/dependencies/unix</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.apache.karaf</groupId>
-                                    <artifactId>apache-karaf</artifactId>
-                                    <version>${karaf.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>target/dependencies/win</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unpack-camel</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.apache.camel</groupId>
-                                    <artifactId>apache-camel</artifactId>
-                                    <version>${camel.version}</version>
-                                    <type>tar.gz</type>
-                                    <outputDirectory>target/dependencies/camel</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unpack-cxf</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.apache.cxf</groupId>
-                                    <artifactId>apache-cxf</artifactId>
-                                    <version>${cxf.version}</version>
-                                    <type>tar.gz</type>
-                                    <outputDirectory>target/dependencies/cxf</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unpack-zookeeper</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.apache.zookeeper</groupId>
-                                    <artifactId>zookeeper</artifactId>
-                                    <version>${zookeeper.package.version}</version>
-                                    <type>tar.gz</type>
-                                    <outputDirectory>target/dependencies/zookeeper</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unpack-activemq</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.apache.activemq</groupId>
-                                    <artifactId>apache-activemq</artifactId>
-                                    <version>${activemq.version}</version>
-                                    <type>tar.gz</type>
-                                    <classifier>bin</classifier>
-                                    <outputDirectory>target/dependencies/activemq-unix</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.apache.activemq</groupId>
-                                    <artifactId>apache-activemq</artifactId>
-                                    <version>${activemq.version}</version>
-                                    <type>zip</type>
-                                    <classifier>bin</classifier>
-                                    <outputDirectory>target/dependencies/activemq-win</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>collect-add-ons</id>
-                        <phase>generate-resources</phase>
-                        <configuration>
-                            <target>
+									<type>tar.gz</type>
+									<outputDirectory>target/dependencies/apache-karaf</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-camel</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.camel</groupId>
+									<artifactId>apache-camel</artifactId>
+									<version>${camel.version}</version>
+									<type>tar.gz</type>
+									<outputDirectory>target/dependencies/camel</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-cxf</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.cxf</groupId>
+									<artifactId>apache-cxf</artifactId>
+									<version>${cxf.version}</version>
+									<type>tar.gz</type>
+									<outputDirectory>target/dependencies/cxf</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-zookeeper</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.zookeeper</groupId>
+									<artifactId>zookeeper</artifactId>
+									<version>${zookeeper.version}</version>
+									<type>tar.gz</type>
+									<outputDirectory>target/dependencies/zookeeper</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-activemq</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+                            <!-- must be decompressed twice as apache-activemq tar.gz/zip contents are different -->
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.activemq</groupId>
+									<artifactId>apache-activemq</artifactId>
+									<version>${activemq.version}</version>
+									<type>tar.gz</type>
+									<classifier>bin</classifier>
+									<outputDirectory>target/dependencies/activemq-unix</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.apache.activemq</groupId>
+									<artifactId>apache-activemq</artifactId>
+									<version>${activemq.version}</version>
+									<type>zip</type>
+									<classifier>bin</classifier>
+									<outputDirectory>target/dependencies/activemq-win</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>collect-add-ons</id>
+						<phase>generate-resources</phase>
+						<configuration>
+							<target>
                                 <patternset id="no.sources.javadoc">
                                     <exclude name="**/target/*-sources.*" />
                                     <exclude name="**/target/*-javadoc.*" />
@@ -1470,10 +1454,7 @@
                                  <replaceregexp byline="true"
                                         match="^(\s*mvn\\:org\.ops4j\.pax\.logging/pax-logging-log4j2/${pax-logging.version})(\s*=.*)$"
                                         replace="\1/jar/TESB\2${line.separator}mvn\\\\:javax\.annotation/javax\.annotation-api/${javax-annotation.version} = 10">
-                                    <fileset dir="target/dependencies/unix/apache-karaf-${karaf.version}/etc/">
-                                        <include name="startup.properties"/>
-                                    </fileset>
-                                    <fileset dir="target/dependencies/win/apache-karaf-${karaf.version}/etc/">
+                                    <fileset dir="target/dependencies/apache-karaf/apache-karaf-${karaf.version}/etc/">
                                         <include name="startup.properties"/>
                                     </fileset>
                                  </replaceregexp>
@@ -1481,10 +1462,7 @@
                                  <replaceregexp byline="true"
                                            match="^(\s*mvn\\:org.apache.karaf.features/org.apache.karaf.features.core/${karaf.version})(\s*=.*)$"
                                            replace="\1/jar/TESB\2">
-                                    <fileset dir="target/dependencies/unix/apache-karaf-${karaf.version}/etc/">
-                                        <include name="startup.properties"/>
-                                    </fileset>
-                                    <fileset dir="target/dependencies/win/apache-karaf-${karaf.version}/etc/">
+                                    <fileset dir="target/dependencies/apache-karaf/apache-karaf-${karaf.version}/etc/">
                                         <include name="startup.properties"/>
                                     </fileset>
                                  </replaceregexp>
@@ -1572,38 +1550,30 @@
                             <goal>run</goal>
                         </goals>
                     </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <id>bin</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>src/main/descriptors/win-bin.xml</descriptor>
-                                <descriptor>src/main/descriptors/unix-bin.xml</descriptor>
-                            </descriptors>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <tarLongFileMode>gnu</tarLongFileMode>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>bin</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/descriptors/assembly.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+							<tarLongFileMode>gnu</tarLongFileMode>
                             <finalName>TESB_SE-V${packages.version}</finalName>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
+                            <formats>${assembly.formats}</formats>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -1613,6 +1583,28 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- specific profiles for building only tar.gz or zip distributions -->
+    <profiles>
+        <profile>
+            <id>dev-unix-assembly-only</id>
+            <properties>
+                <assembly.formats>tar.gz</assembly.formats>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev-win-assembly-only</id>
+            <properties>
+                <assembly.formats>zip</assembly.formats>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev-dir-assembly-only</id>
+            <properties>
+                <assembly.formats>dir</assembly.formats>
+            </properties>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
