TESB-27136 : ELK 7.3.2 update/ rename prospectors to inputs

--- a/talend-esb/src/main/distribution/text/container/etc/filebeat_em.yml
+++ b/talend-esb/src/main/distribution/text/container/etc/filebeat_em.yml
@@ -1,8 +1,8 @@
 ###################### Filebeat Configuration Example #########################
 
-#=========================== Filebeat prospectors =============================
+#=========================== Filebeat inputs =============================
 
-filebeat.prospectors:
+filebeat.inputs:
 
 - type: log
   enabled: true
