--- a/pom.xml
+++ b/pom.xml
@@ -92,18 +92,18 @@
 
     <properties>
         <packages.version>${project.version}</packages.version>
-        <cxf.version>3.3.1</cxf.version>
-        <camel.version>2.23.1</camel.version>
-        <activemq.version>5.15.9</activemq.version>
-        <spring.version>5.1.5.RELEASE</spring.version>
-        <karaf.version>4.2.4</karaf.version>
+        <cxf.version>3.3.4</cxf.version>
+        <camel.version>2.24.2</camel.version>
+        <activemq.version>5.15.10</activemq.version>
+        <spring.version>5.1.9.RELEASE</spring.version>
+        <karaf.version>4.2.7</karaf.version>
         <decanter.version>2.2.0</decanter.version>
         <zookeeper.version>3.4.13</zookeeper.version>
         <derby.version>10.14.2.0</derby.version>
         <derby.servicemix.version>10.14.2.0_2</derby.servicemix.version>
         <slf4j.version>1.7.12</slf4j.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
         <dom4j.bundle.version>1.6.1_5</dom4j.bundle.version>
         <jaxen.bundle.version>1.1.1_2</jaxen.bundle.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
@@ -112,20 +112,20 @@
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <commons-dbcp.bundle.version>1.4_3</commons-dbcp.bundle.version>
         <commons-collections.version>3.2.2</commons-collections.version>
-        <commons-beanutils.version>1.8.3_1</commons-beanutils.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-jxpath.version>1.3</commons-jxpath.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
         <osgi.core.version>6.0.0</osgi.core.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
-        <jetty.version>9.4.18.v20190429</jetty.version>
-        <pax-web-jsp.version>7.2.10</pax-web-jsp.version>
+        <jetty.version>9.4.20.v20190813</jetty.version>
+        <pax-web-jsp.version>7.2.11</pax-web-jsp.version>
         <oscache.bundle.version>2.4_5</oscache.bundle.version>
         <cglib.bundle.version>3.2.4_1</cglib.bundle.version>
         <ibatis-sqlmap.bundle.version>2.3.4.726_4</ibatis-sqlmap.bundle.version>
         <jolokia.version>1.6.0</jolokia.version>
         <h2database.version>1.3.165</h2database.version>
         <jettison.version>1.3.8</jettison.version>
-        <jasypt.version>1.9.2_1</jasypt.version>
+        <jasypt.version>1.9.3_1</jasypt.version>
         <bouncycastle.version>1.60</bouncycastle.version>
         <hibersap.version>1.2.0</hibersap.version>
         <javax.el.version>3.0.0</javax.el.version>
@@ -133,14 +133,11 @@
 
         <jclouds.version>2.1.2</jclouds.version>
         <pax-url-classpath.version>1.2.8</pax-url-classpath.version>
-        <wss4j.version>2.2.2</wss4j.version>
+        <wss4j.version>2.2.4</wss4j.version>
         <xerces.version>2.12.0_1</xerces.version>
         <log4j.version>1.2.17</log4j.version>
-        <pax-web.version>7.2.10</pax-web.version>
-        <pax-logging.version>1.10.1</pax-logging.version>
         <javax-annotation.version>1.3.1</javax-annotation.version>
-        <blueprint.core.version>1.8.3</blueprint.core.version>
-        <jackson.version>2.9.9</jackson.version>
+        <jackson.version>2.10.0</jackson.version>
         <qpid-jms.version>0.11.1</qpid-jms.version>
         <fastjson.version>1.2.37_1</fastjson.version>
         <sparkjava-core.version>2.6.0_1</sparkjava-core.version>
@@ -228,8 +225,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
                 <plugin>
