--- a/talend-esb/src/main/distribution/text/container/etc/jre.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/jre.properties
@@ -27,6 +27,7 @@ jre-1.6= \
  javax.accessibility, \
  javax.activation;version="1.1", \
  javax.activity, \
+ javax.annotation;version="1.0", \
  javax.annotation.processing;version="1.0", \
  javax.crypto, \
  javax.crypto.interfaces, \
@@ -189,6 +190,7 @@ jre-1.7= \
  javax.accessibility, \
  javax.activation;version="1.1", \
  javax.activity, \
+ javax.annotation;version="1.0", \
  javax.annotation.processing;version="1.0", \
  javax.crypto, \
  javax.crypto.interfaces, \
@@ -342,6 +344,7 @@ jre-1.8= \
  javax.accessibility, \
  javax.activation;version="1.2", \
  javax.activity, \
+ javax.annotation;version="1.0", \
  javax.annotation.processing;version="1.0", \
  javax.crypto, \
  javax.crypto.interfaces, \
@@ -353,6 +356,8 @@ jre-1.8= \
  javax.imageio.plugins.jpeg, \
  javax.imageio.spi, \
  javax.imageio.stream, \
+ javax.jws, \
+ javax.jws.soap, \
  javax.lang.model, \
  javax.lang.model.element, \
  javax.lang.model.type, \
@@ -536,6 +541,7 @@ jre-9= \
  javax.accessibility, \
  javax.activation;version="1.2", \
  javax.activity, \
+ javax.annotation;version="1.3", \
  javax.annotation.processing;version="1.0", \
  javax.crypto, \
  javax.crypto.interfaces, \
@@ -572,7 +578,6 @@ jre-9= \
  javax.print.attribute.standard, \
  javax.print.event, \
  javax.rmi, \
- javax.rmi.CORBA, \
  javax.rmi.ssl, \
  javax.script, \
  javax.security.auth, \
@@ -673,35 +678,6 @@ jre-9= \
  javafx.util.converter, \
  netscape.javascript, \
  org.ietf.jgss, \
- org.omg.CORBA, \
- org.omg.CORBA_2_3, \
- org.omg.CORBA_2_3.portable, \
- org.omg.CORBA.DynAnyPackage, \
- org.omg.CORBA.ORBPackage, \
- org.omg.CORBA.portable, \
- org.omg.CORBA.TypeCodePackage, \
- org.omg.CosNaming, \
- org.omg.CosNaming.NamingContextExtPackage, \
- org.omg.CosNaming.NamingContextPackage, \
- org.omg.Dynamic, \
- org.omg.DynamicAny, \
- org.omg.DynamicAny.DynAnyFactoryPackage, \
- org.omg.DynamicAny.DynAnyPackage, \
- org.omg.IOP, \
- org.omg.IOP.CodecFactoryPackage, \
- org.omg.IOP.CodecPackage, \
- org.omg.Messaging, \
- org.omg.PortableInterceptor, \
- org.omg.PortableInterceptor.ORBInitInfoPackage, \
- org.omg.PortableServer, \
- org.omg.PortableServer.CurrentPackage, \
- org.omg.PortableServer.POAManagerPackage, \
- org.omg.PortableServer.POAPackage, \
- org.omg.PortableServer.portable, \
- org.omg.PortableServer.ServantLocatorPackage, \
- org.omg.SendingContext, \
- org.omg.stub.java.rmi, \
- org.omg.stub.javax.management.remote.rmi, \
  org.w3c.dom, \
  org.w3c.dom.bootstrap, \
  org.w3c.dom.css, \
