--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -57,6 +57,7 @@
         <camel.version>2.24.2</camel.version>
         <spring.version>5.1.9.RELEASE</spring.version>
         <karaf.version>4.2.7</karaf.version>
+        <jettison.version>1.4.0</jettison.version>
         <activemq.version>5.15.10</activemq.version>
         <osgi.version>6.0.0</osgi.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
