--- a/locator-monitor/pom.xml
+++ b/locator-monitor/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.talend.esb</groupId>
 			<artifactId>locator</artifactId>
-			<version>${parent.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<!-- Test dependencies -->
 		<dependency>
