TESB-27353 Fixing compilation error by excluding old library and adding beans bundle to project.

--- a/examples/cxf/features/pom.xml
+++ b/examples/cxf/features/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <features.file>features.xml</features.file>
+        <org.springframework.beans.version>2.5.6</org.springframework.beans.version>
     </properties>
 
     <build>
