--- a/examples/cxf/jaxrs-jaxws-description-first/common/pom.xml
+++ b/examples/cxf/jaxrs-jaxws-description-first/common/pom.xml
@@ -27,6 +27,12 @@
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
             <version>${cxf.xjc.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.activation</groupId>
+                    <artifactId>jakarta.activation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
