Add cache management for token : The token details are stored in LRUMap (A Map implementation with a fixed maximum size which removes the least recently used entry if an entry is added when full.) On each request : * Check if the token is in the LRUMap --> If yes, check if the token is valid --> If not or token is invalid, request the token details to IDP and store it in the LRUMap * Check if token details is valid (based on exp field, EPOCH Time) --> If yes, the OIDC is granted --> If no, the OIDC is denied and the token is removed from LRUMap.
This feature adds 2 properties in the cfg file :
cache.use --> false by default
cache.size --> 100 by default

--- a/pom.xml
+++ b/pom.xml
@@ -517,12 +517,12 @@
         <repository>
             <id>esb-releases</id>
             <name>ESB releases Repository</name>
-            <url>${esb.releases.repo.url}</url>
+            <url>http://admin:Talend123@refcant-tlnd-tac-dev.ad.net.fr.ch:8081/repository/releases-ci/</url>
         </repository>
         <snapshotRepository>
             <id>esb-snapshots</id>
             <name>ESB snapshots Repository</name>
-            <url>${esb.snapshots.repo.url}</url>
+            <url>http://admin:Talend123@refcant-tlnd-tac-dev.ad.net.fr.ch:8081/repository/snapshots-ci/</url>
         </snapshotRepository>
     </distributionManagement>
 
