--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <osgi.core.version>6.0.0</osgi.core.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
         <jetty.version>9.4.20.v20190813</jetty.version>
-        <pax-web-jsp.version>7.2.11</pax-web-jsp.version>
+        <pax.web.version>7.2.12</pax.web.version>
         <oscache.bundle.version>2.4_5</oscache.bundle.version>
         <cglib.bundle.version>3.2.4_1</cglib.bundle.version>
         <ibatis-sqlmap.bundle.version>2.3.4.726_4</ibatis-sqlmap.bundle.version>
