feat(TESB-27620) Update to dom4j 2.1.1 (#154)
jaxen also has to be upgraded from 1.1.1 to 1.1.6 as the dom4j 2.1.1 requires org.jaxen [1.1.6,2)
and the cxf/camel features xml have to be patched.

--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -1166,6 +1166,10 @@
                                     <replacefilter
                                         token="mvn:com.fasterxml.jackson.module/jackson-module-jsonSchema/2.9.9"
                                         value="mvn:com.fasterxml.jackson.module/jackson-module-jsonSchema/${jackson.version}"/>
+                                    <!-- patch the dom4j version in Camel for TESB-27620 -->
+                                    <replacefilter
+                                        token="mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.dom4j/1.6.1_5"
+                                        value="mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.dom4j/${dom4j.bundle.version}"/>
                                 </replace>
                                 <!-- Patch jetty version range in Camel features (TESB-18114/CAMEL-10433) -->
                                 <replaceregexp byline="false" flags="gim"
@@ -1250,6 +1254,10 @@
                                     <replacefilter
                                         token="mvn:com.fasterxml.jackson.datatype/jackson-datatype-jsr310/2.9.10"
                                         value="mvn:com.fasterxml.jackson.datatype/jackson-datatype-jsr310/${jackson.version}"/>
+                                    <!-- patch the dom4j version in CXF for TESB-27620 -->
+                                    <replacefilter
+                                        token="mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.dom4j/1.6.1_5"
+                                        value="mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.dom4j/${dom4j.bundle.version}"/>
                                 </replace>
                                 <!-- patch the cxf-jackson feature (TESB-27214/CXF-8155) -->
                                 <replaceregexp byline="false" flags="gim"
