TESB-27959 - Update remaining CXF/TESB examples

--- a/examples/cxf/jaxrs-jaxws-java-first/war/pom.xml
+++ b/examples/cxf/jaxrs-jaxws-java-first/war/pom.xml
@@ -47,11 +47,13 @@
         <finalName>services</finalName>
         <plugins>
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.15</version>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.version}</version>
                 <configuration>
-                    <contextPath>/${project.build.finalName}</contextPath>
+                    <webApp>
+                        <contextPath>/${project.build.finalName}</contextPath>
+                    </webApp>
                 </configuration>
             </plugin>
         </plugins>
