--- a/examples/cxf/jaxrs-oauth2/sso-saml/reservations-war/pom.xml
+++ b/examples/cxf/jaxrs-oauth2/sso-saml/reservations-war/pom.xml
@@ -64,13 +64,15 @@
         <finalName>reservations</finalName>
         <plugins>
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.15</version>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.version}</version>
                 <configuration>
-                    <contextPath>/${project.build.finalName}</contextPath>
+                    <webApp>  
+                        <contextPath>/${project.build.finalName}</contextPath>
+                    </webApp>
                     <connectors>
-                      <connector implementation="org.mortbay.jetty.security.SslSocketConnector">
+                      <connector implementation="org.eclipse.jetty.security.SslSocketConnector">
                          <port>${http.port}</port>
                          <keystore>${project.build.directory}/reservations/WEB-INF/servicestore.jks</keystore>
                          <password>sspass</password>
